overflow fixed

--- a/src/components/slides/CommonSl.module.css
+++ b/src/components/slides/CommonSl.module.css
@@ -10,8 +10,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   height: calc(100vh - 15rem); 
-   overflow-y: scroll;
+   height: calc(100vh - 15rem);
 }
 
 .caption{
